package com.miniteldo.tools;

// Project : graphical-interface

/**
 * Classe StringModifier ...
 * Date : 03/03/2022
 * Auteur : Julian
 */
public class StringModifier {
    // Attributs

    // Methods

    /**
     * Remove spaces from String
     *
     * @param s
     * @return the new string
     */
    public static String removeAllSpace(String s) {
        return s.replaceAll(" ", "");
    }
}
