package dev.miniteldo.search.model.engine;

public enum Config {
    TEXT_FILTER_MODE,
    TEXT_FILTER_VALUE,
    TEXT_INDEX_TABLE_SIZE,

    IMAGE_NUM_BITS_QUANTIFICATION,
    IMAGE_THRESHOLD,

    AUDIO_SAMPLES,
    AUDIO_INTERVAL,
    AUDIO_STEP,
    AUDIO_THRESHOLD
}
