package dev.miniteldo.search.model.engine.searcher;

import java.util.ArrayList;

public class AudioSearcher extends Searcher {

    @Override
    public ArrayList<SearchResult> search(String request) {
        return null;
    }
}
