@startuml

title __DEMO's Class Diagram__\n

  namespace  {
    namespace ev.miniteldo.search {
      class dev.miniteldo.search.App {
      }
    }
  }
  

  namespace  {
    namespace ev.miniteldo.search {
      namespace controller {
        class dev.miniteldo.search.controller.ConfigurationController {
        }
      }
    }
  }
  

  namespace  {
    namespace ev.miniteldo.search {
      namespace controller {
        class dev.miniteldo.search.controller.ErrorController {
        }
      }
    }
  }
  

  namespace  {
    namespace ev.miniteldo.search {
      namespace controller {
        class dev.miniteldo.search.controller.MainMenuController {
        }
      }
    }
  }
  

  namespace  {
    namespace ev.miniteldo.search {
      namespace controller {
        class dev.miniteldo.search.controller.ParameterController {
        }
      }
    }
  }
  

  namespace  {
    namespace ev.miniteldo.search {
      namespace controller {
        class dev.miniteldo.search.controller.SearchController {
        }
      }
    }
  }
  

  namespace  {
    namespace ev.miniteldo.search {
      namespace model {
        class dev.miniteldo.search.model.AppState {
        }
      }
    }
  }
  

  namespace  {
    namespace ev.miniteldo.search {
      namespace model {
        namespace engines.dummyengine {
          enum Config {
          }
        }
      }
    }
  }
  

  namespace  {
    namespace ev.miniteldo.search {
      namespace model {
        namespace engines.dummyengine {
          class dev.miniteldo.search.model.engines.dummyengine.DummyEngine {
          }
        }
      }
    }
  }
  

  namespace  {
    namespace ev.miniteldo.search {
      namespace model {
        namespace engines.dummyengine {
          interface dev.miniteldo.search.model.engines.dummyengine.SearchEngine {
          }
        }
      }
    }
  }
  

  namespace  {
    namespace ev.miniteldo.search {
      namespace model {
        namespace engines.dummyengine {
          class dev.miniteldo.search.model.engines.dummyengine.SearchResult {
          }
        }
      }
    }
  }
  

  namespace  {
    namespace ev.miniteldo.search {
      namespace model {
        namespace engines.miniteldoengine {
          enum Config {
          }
        }
      }
    }
  }
  

  namespace  {
    namespace ev.miniteldo.search {
      namespace model {
        namespace engines.miniteldoengine {
          class dev.miniteldo.search.model.engines.miniteldoengine.MiniteldoEngine {
          }
        }
      }
    }
  }
  

  namespace  {
    namespace ev.miniteldo.search {
      namespace model {
        namespace engines.miniteldoengine {
          interface dev.miniteldo.search.model.engines.miniteldoengine.SearchEngine {
          }
        }
      }
    }
  }
  

  namespace  {
    namespace ev.miniteldo.search {
      namespace model {
        namespace engines.miniteldoengine {
          class dev.miniteldo.search.model.engines.miniteldoengine.Test {
          }
        }
      }
    }
  }
  

  namespace  {
    namespace ev.miniteldo.search {
      namespace model {
        namespace engines.miniteldoengine {
          namespace command {
            class dev.miniteldo.search.model.engines.miniteldoengine.command.Command {
            }
          }
        }
      }
    }
  }
  

  namespace  {
    namespace ev.miniteldo.search {
      namespace model {
        namespace engines.miniteldoengine {
          namespace searcher {
            class dev.miniteldo.search.model.engines.miniteldoengine.searcher.AudioSearcher {
            }
          }
        }
      }
    }
  }
  

  namespace  {
    namespace ev.miniteldo.search {
      namespace model {
        namespace engines.miniteldoengine {
          namespace searcher {
            class dev.miniteldo.search.model.engines.miniteldoengine.searcher.ImageSearcher {
            }
          }
        }
      }
    }
  }
  

  namespace  {
    namespace ev.miniteldo.search {
      namespace model {
        namespace engines.miniteldoengine {
          namespace searcher {
            class dev.miniteldo.search.model.engines.miniteldoengine.searcher.SearchResult {
            }
          }
        }
      }
    }
  }
  

  namespace  {
    namespace ev.miniteldo.search {
      namespace model {
        namespace engines.miniteldoengine {
          namespace searcher {
            abstract class dev.miniteldo.search.model.engines.miniteldoengine.searcher.Searcher {
            }
          }
        }
      }
    }
  }
  

  namespace  {
    namespace ev.miniteldo.search {
      namespace model {
        namespace engines.miniteldoengine {
          namespace searcher {
            class dev.miniteldo.search.model.engines.miniteldoengine.searcher.SearcherFactory {
            }
          }
        }
      }
    }
  }
  

  namespace  {
    namespace ev.miniteldo.search {
      namespace model {
        namespace engines.miniteldoengine {
          namespace searcher {
            enum SearcherType {
            }
          }
        }
      }
    }
  }
  

  namespace  {
    namespace ev.miniteldo.search {
      namespace model {
        namespace engines.miniteldoengine {
          namespace searcher {
            class dev.miniteldo.search.model.engines.miniteldoengine.searcher.TextSearcher {
            }
          }
        }
      }
    }
  }
  

  namespace  {
    namespace ev.miniteldo.search {
      namespace model {
        namespace tools {
          enum Regex {
          }
        }
      }
    }
  }
  

  namespace  {
    namespace ev.miniteldo.search {
      namespace model {
        namespace tools {
          class dev.miniteldo.search.model.tools.StringModifier {
          }
        }
      }
    }
  }
  

  namespace  {
    namespace ev.miniteldo.search {
      namespace view {
        enum Dialog {
        }
      }
    }
  }
  

  namespace  {
    namespace ev.miniteldo.search {
      namespace view {
        class dev.miniteldo.search.view.Error {
        }
      }
    }
  }
  

  namespace  {
    namespace ev.miniteldo.search {
      namespace view {
        class dev.miniteldo.search.view.SVGIcon {
        }
      }
    }
  }
  

  namespace  {
    namespace ev.miniteldo.search {
      namespace view {
        enum Views {
        }
      }
    }
  }
  

  dev.miniteldo.search.App -up-|> javafx.application.Application
  dev.miniteldo.search.controller.ParameterController o-- dev.miniteldo.search.model.AppState : state
  dev.miniteldo.search.model.engines.dummyengine.DummyEngine .up.|> dev.miniteldo.search.model.engines.dummyengine.SearchEngine
  dev.miniteldo.search.model.engines.dummyengine.DummyEngine o-- dev.miniteldo.search.model.engines.miniteldoengine.searcher.Searcher : searcher
  dev.miniteldo.search.model.engines.miniteldoengine.MiniteldoEngine .up.|> dev.miniteldo.search.model.engines.miniteldoengine.SearchEngine
  dev.miniteldo.search.model.engines.miniteldoengine.searcher.AudioSearcher -up-|> dev.miniteldo.search.model.engines.miniteldoengine.searcher.Searcher
  dev.miniteldo.search.model.engines.miniteldoengine.searcher.ImageSearcher -up-|> dev.miniteldo.search.model.engines.miniteldoengine.searcher.Searcher
  dev.miniteldo.search.model.engines.miniteldoengine.searcher.Searcher o-- dev.miniteldo.search.model.engines.miniteldoengine.searcher.SearcherType : searcherType
  dev.miniteldo.search.model.engines.miniteldoengine.searcher.TextSearcher -up-|> dev.miniteldo.search.model.engines.miniteldoengine.searcher.Searcher
  dev.miniteldo.search.view.SVGIcon -up-|> javafx.scene.Group


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
